OPENNLP-1666: Switch to pre-trained UD models in Similarity component (#195)
switches to ud-models in opennlp-similarity component
uses thread-safe Tokenizer, POSTagger and SentenceDetector impl classes to avoid
switches 'tika-app' to more lightweight 'tika-core' dep
switches 'docx4j' to more lightweight / modern 'docx4j-core' dep (11.5.1, jakarta) race conditions, as shown by JUnit tests sometimes
adapts README.md