@@ -20,9 +20,8 @@ package opennlp.tools.enron_email_recognizer;
 import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.util.List;
-
-import org.apache.commons.io.FileUtils;
 
 public class EmailTrainingSetFormer {
 	static final String DATA_DIR = "/Users/bgalitsky/Downloads/";
@@ -32,14 +31,14 @@ public class EmailTrainingSetFormer {
 	//enron_with_categories/5/70665.cats:4,10,1
 	public static void  createPosTrainingSet(){
 		try {
-			List<String> lines = FileUtils.readLines(new File(DATA_DIR + FILE_LIST_FILE), StandardCharsets.UTF_8);
+			List<String> lines = Files.readAllLines(new File(DATA_DIR + FILE_LIST_FILE).toPath(), StandardCharsets.UTF_8);
 			for(String l: lines){
 				int endOfFname = l.indexOf('.'), startOfFname = l.lastIndexOf('/');
 				String filenameOld = DATA_DIR + l.substring(0, endOfFname)+".txt";
 				String content = normalize(new File(filenameOld));
 				String filenameNew = DESTINATION_DIR + l.substring(startOfFname+1, endOfFname)+".txt";
 				//FileUtils.copyFile(new File(filenameOld), new File(filenameNew));
-				FileUtils.writeStringToFile(new File(filenameNew), content, StandardCharsets.UTF_8);
+				Files.writeString(new File(filenameNew).toPath(), content, StandardCharsets.UTF_8);
 			}
 		} catch (Exception e) {
 			e.printStackTrace();
@@ -52,7 +51,7 @@ public class EmailTrainingSetFormer {
 	public static String normalize(File f){
 		String content="";
 		try {
-			content = FileUtils.readFileToString(f, StandardCharsets.UTF_8);
+			content = Files.readString(f.toPath(), StandardCharsets.UTF_8);
 		} catch (IOException e) {
 			e.printStackTrace();
 		}
